# Hachi-VR

HACHI-Complete/: CMakeLists.txt  HACHI-INSTALLER.sh  INSTALL  QUICK-START.txt  README.md  cosmos_driver.cpp  cosmos_driver.h  driver.vrdrivermanifest  finger_tracking.py  hachi_control.py  resources.vrsettings
HACHI-Complete/driver/: Makefile  README.md  cosmos_bridge.cpp
hachi-arch/: Cmake  DOUBLE-CLICK-INSTALL-ARCH.md  EMERGENCY-RECOVERY-ARCH.md  EMERGENCY-RECOVERY.md  INSTALL_HACHI_arch.py  QUICKSTART-ARCH.md  README-ARCH.md  START-HERE.md  cosmos_bridge.cpp  enhanced_tracking_arch.py  hachi_control_center.py  hachi_safe_installer_arch.sh  launch_cosmos_vr.sh  vr_manager.sh
hachi-complete/: ALL-IN-ONE-GUIDE.md  DOWNLOAD-OPTIONS.md  IMPROVEMENTS.md  INSTALL.sh  QUICKSTART-GUI.md  README-ENHANCED.md  README.md  controller_manager.py  cosmos_auto_installer.sh  cosmos_control_center.py  display_optimizer.sh  enhanced_tracking.py  firmware_manager.sh  hachi_control_center.py  monado-cosmos.service  vive_cosmos_setup.sh
hachi-complete-drivers/hachi-complete/: COPY_ALL_DOCUMENTS.txt  FILE_LIST.txt  INSTALLER-IMPROVEMENTS.md  PACKAGE_INFO.md  QUICK_SETUP.md  README.md  hachi_safe_installer.sh
hachi-safe/: DOUBLE-CLICK-INSTALL.md  HACHI-FINGER-TRACKING.md  HACHI-OVERVIEW.md  INSTALL_HACHI.py  Makefile  README-SAFE-VERSION.md  START-HERE-APOLOGY.md  cosmos_monitor.py  display_optimizer.sh  hachi_control_center.py  hachi_safe_installer.sh  launch_cosmos_vr.sh
